Reduced z-index of header bar to avoid conflict with drupal admin bar

--- a/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -5,7 +5,7 @@
   border-bottom: 1px solid $gray-lightest;
   box-shadow: 0 5px 2px -2px rgba(62, 60, 98, 0.08);
   max-height: $space-quadruple;
-  z-index: 9999;
+  z-index: 10;
   // background-image: linear-gradient(135deg, rgba(82, 97, 172, 0.79) 0%, rgba(80, 201, 181, 0.79) 100%);
 }
 
